# command-line-cookbook

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  test-markdown.md  vite.config.ts
assets/: icon.icns
assets/CLICookbookComposer.icon/: icon.json
public/fonts/: demo.html
src/: fonts.css  index.css  main.tsx  routeTree.gen.ts  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/docs/: 0-tutorial.mdx  1-installing.mac.mdx  1-installing.windows.mdx  2-ollama-help.mdx
src-tauri/data/recipes/ffmpeg/: convert-video.json
src-tauri/data/recipes/gifski/: video-to-gif.json
src-tauri/data/recipes/magick/: heic-to-jpeg.json  image-to-icns.json  image-to-ico.json
src-tauri/data/recipes/ytdl/: download-youtube-audio-only.json  download-youtube-video.json
src-tauri/shell_integration/: bash.sh  powershell.ps1  zsh.sh
src-tauri/shell_integration/fish/vendor_conf.d/: command_line_cookbook.fish
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: security_tests.rs
src/app/: hooks.ts  store.ts
src/components/: CodeBlock.tsx  ErrorView.tsx  InstallBlock.tsx  PageTitle.tsx  PromptDisplay.tsx  StaticTerminal.tsx  TopNav.tsx  TopNavTitle.tsx  useResizeObserver.ts
src/components/DesignSystem/: Button.tsx  Field.tsx  NumberField.tsx  Switch.tsx  TextField.tsx  utils.ts
src/routes/: __root.tsx  docs.$.tsx  index.tsx  recipes.$.tsx  settings.tsx
src/utils/: markdownProcessor.tsx  rehypeExternalLinksPlugin.test.ts  rehypeExternalLinksPlugin.ts  rehypeShellPlugin.ts
(+27 files in other folders)
